[tool.poetry]
name = 'PyWarm'
version = '0.4.0'
description = 'A cleaner way to build neural networks for PyTorch.'
license = 'MIT'
authors = ['blue-season <very.blue.season@gmail.com>']
readme = 'README.md'
repository = 'https://github.com/blue-season/pywarm'
homepage = 'https://github.com/blue-season/pywarm'
keywords = ['pywarm', 'pytorch', 'neural network', 'deep learning']
packages = [ { include='warm' }, ]


[tool.poetry.dependencies]
python = '>=3.6'


[tool.poetry.dev-dependencies]
toml = '>=0.9'
pytest = '>=3.0'
torch = '>=1.0'
torchvision = '>=0.4'


[tool.portray]
modules = ['warm']


[tool.portray.mkdocs]
markdown_extensions = ['pymdownx.superfences']


[tool.portray.mkdocs.theme]
logo = 'docs/pywarm-logo-small-light.gif'
favicon = 'docs/pywarm-logo-small-dark.gif'
name = 'material'
palette = {primary='deep orange', accent='pink'}


[tool.portray.pdoc3]
config = ['show_source_code=False',
    'show_type_annotations=False',
    'sort_identifiers=True',
    'show_inherited_members=False']
template_dir = 'docs'
